# SupGIT

./: .gitignore  Cargo.toml  MISSING_FEATURES.md
.forgejo/workflows/: publish.yml
src/: cli.rs  git.rs  main.rs  status.rs
src/commands/: alias.rs  branch.rs  commit.rs  diff.rs  mod.rs  remote.rs  reset.rs  shelve.rs  stage.rs  tag.rs  unstage.rs  update.rs  worktree.rs
website/: index.html  install.sh  styles.css  uninstall.sh
