[package]
name = "supgit"
version = "0.4.1"
edition = "2024"
description = "SupGit, the GIT CLI simplified."
license = "AGPL-3.0-only"
repository = "https://github.com/thomasboom/SupGIT"
homepage = "https://github.com/thomasboom/SupGIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs = "6.0"
log = "0.4"
strsim = "0.11"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
