[package]
name = "supgit"
version = "0.4.4"
edition = "2021"
description = "SupGit, the GIT CLI simplified."
license = "AGPL-3.0-only"
repository = "https://codeberg.org/thomasboom/SupGIT"
homepage = "https://thomasboom.codeberg.page/SupGIT/"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
dirs = "6.0"
log = "0.4"
strsim = "0.11"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
